--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -2,6 +2,7 @@ repositories {
     mavenCentral()
     google() // Needed for androidx
     maven { url = 'https://maven.brott.dev/' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -16,5 +17,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
     implementation 'com.acmerobotics.dashboard:dashboard:0.4.15'
+
+    implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
+
+
 }
 
