--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'net.jcip:jcip-annotations:1.0'
 
 //    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
 //    implementation "com.acmerobotics.roadrunner:core:1.0.0"
