--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -38,15 +38,11 @@ dependencies {
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
+    implementation "com.acmerobotics.roadrunner:core:1.0.0"
+    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
+    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation 'net.jcip:jcip-annotations:1.0'
     implementation 'org.ftclib.ftclib:core:2.1.1'
-
-//    releaseImplementation 'com.arcrobotics:ftclib:2.1.1'
-
-//    implementation "com.acmerobotics.roadrunner:ftc:0.1.14"
-//    implementation "com.acmerobotics.roadrunner:core:1.0.0"
-//    implementation "com.acmerobotics.roadrunner:actions:1.0.0"
-//    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
 
 }
