--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:Vision:10.1.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
+//    implementation 'com.acmerobotics.dashboard:dashboard:0.4.16'
 
     implementation 'com.github.Thermal-Equilibrium:homeostasis-FTC:1.0.8'
 
